--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -608,13 +608,19 @@ cascading hierarchy, use the !important attribute.
 
 /* Approach 2: Override PrimeFaces p:commandButton style */
 .commandButton {
-    border-radius: 2em !important;
-    font-family: Arial, Helvetica, sans-serif !important;
-    font-size: 10pt !important;
-    font-style: normal !important;
-    font-weight: normal !important;
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: 300;
+    color: white;
     text-decoration: none;
-    color: black;
+    background: #313134;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: none;
+}
+
+.commandButton:hover {
+    border-color: #0aa9f7;
 }
 
 /* Approach 2: Override PrimeFaces p:menubar style */
@@ -630,7 +636,7 @@ cascading hierarchy, use the !important attribute.
 
 .calendarClass input {
     font-family: Lato;
-    width: 250px;
+    width: 325px;
     box-shadow: none;
 }
 
