--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -94,7 +94,7 @@ Copyright © 2017 Abhiroop Singh. All rights reserved.
                     <!-- "Sign Out" and "My Account" if a user is signed in -->
                     <c:if test="#{accountManager.isLoggedIn() == true}">
                         <!-- Clicking "Home" displays the index.xhtml file -->
-                        <h:link outcome="UserHomePage" styleClass="header_tab">Home</h:link> &nbsp;&nbsp;
+                        <h:link outcome="UserHomePage" styleClass="header_tab">Profile</h:link> &nbsp;&nbsp;
                         <h:link outcome="CheckWeather" styleClass="header_tab">Check Weather</h:link> &nbsp;&nbsp;
                         <!-- Clicking "Sign Out" invokes accountManager's logout() method -->
                         <h:commandLink action="#{accountManager.logout()}" styleClass="header_tab">Sign Out</h:commandLink>&nbsp;&nbsp;
