--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -700,3 +700,10 @@ td.val {
     font-size: 20px;
 }
 
+td.hPage {
+    width: 100px;
+    padding-bottom: 10px;
+    font-family: Lato;
+    font-size: 20px;
+}
+
