--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -46,7 +46,7 @@ Copyright © 2017 Abhiroop Singh. All rights reserved.
                     <!-- "Sign Out" and "My Account" if a user is signed in -->
                     <c:if test="#{accountManager.isLoggedIn() == true}">
                         <!-- Clicking "Home" displays the UserHomePage.xhtml file -->
-                        <h:link outcome="UserHomePage" styleClass="header_tab">Profile</h:link> &nbsp;&nbsp;
+                        <h:link outcome="UserHomePage" onclick="#{searchedWeatherController.setCurrentLocation()}" styleClass="header_tab">Profile</h:link> &nbsp;&nbsp;
                         <h:link outcome="CheckWeather" styleClass="header_tab" onclick="#{searchedWeatherController.clearSearchFields()}">Check Weather</h:link> &nbsp;&nbsp;
                         <!-- Clicking "Planner" displays the Planner.xhtml file -->
                         <h:link outcome="Planner" styleClass="header_tab">My Planner</h:link>&nbsp;&nbsp;
